2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* MakefileData.cs: Improve grammar/formatting for translatable strings.
	  Replace console writes with logging.
	* MakefileOptionPanelWidget.cs, SimpleProjectMakefileHandler.cs: Improve
	  formatting of translatable strings.

2007-12-31  Ankit Jain  <jankit@novell.com>

	* SimpleProjectMakefileHandler.cs: Use macros for emitting deploy
	targets. Saves lot of redundant lines.
	Honor dir structure of the source deploy file (eg. f1/f2/foo.txt should
	be deployed to BUILD_DIR/f1/f2/foo.txt). Do this for install/uninstall
	targets also.
	* templates/Makefile.include: Add macros for emitting deploy targets.
	* templates/Makefile.am.project.template: Fix positioning of include
	Makefile.include to fix macros for autotools based makefiles.

2007-12-21  Miguel de Icaza <miguel@novell.com> 

	

2007-12-20  Ankit Jain  <jankit@novell.com>

	* MakefileGeneratorTool.cs: Use GettextCatalog.GetString for
	user-visible strings.

2007-12-18  Ankit Jain  <jankit@novell.com>

	Fix bug #349419
	* SimpleProjectMakefileHandler.cs: Honor DESTDIR.
	* templates/Makefile.solution.template: Make sure exit_codes work
	(escape shell so $$final_exit means something)
	* templates/make-dist.targets: Remove spurious spaces.
	Based on patches by Wade Berrier.

2007-12-17  Ankit Jain  <jankit@novell.com>

	* Minor fixes like use String.Empty instead of "" etc.

2007-12-14  Ankit Jain  <jankit@novell.com>

	* MakefileData.cs: Re-init Build vars when the owner project gets set.

2007-12-14  Ankit Jain  <jankit@novell.com>

	* SolutionDeployer.cs: Remove dead code.

2007-12-14  Ankit Jain  <jankit@novell.com>

	Fix bug #347649
	* AutotoolsContext.cs (AddRequiredPackages): Allow packages to be
	specified per config.
	(GetRequiredPackages): Per config.
	(GetCommonRequiredPackages): Packages common to all configs.
	* Set.cs (Intersect): New.
	(Count): New.
	(ToString): Override.